# AstraShell

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG_2026-05-04.md  CLEANUP_STATUS.md  MIGRATION_PLAN.md  PRD.zh-CN.md  PROJECT_MEMORY.md  README.md  TAURI_MIGRATION_COMPLETE.md  TAURI_MIGRATION_GUIDE.md  TAURI_MIGRATION_STATUS.md  TAURI_SETUP.md  TODO.v1.md  UI-IA.md
.claude/skills/: code-reviewer  find-skills  frontend-design  skill-creator
.github/workflows/: check.yml
app/: .env.qiniu.example  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
app/electron/: after-pack.cjs  main.mjs  preload.cjs  preload.mjs
app/electron/ipc/: database.mjs  local.mjs  localfs.mjs  schemas.mjs  sftp.mjs  ssh.mjs
app/release/: latest-linux-arm64.yml  latest-mac.yml  latest.yml
app/scripts/: qiniu-publish.mjs  release-qiniu.sh  smoke-folder-sync.mjs
app/src/: App.vue  env.d.ts  main.ts  style.css  theme-light-gray.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: database.rs  lib.rs  local_shell.rs  serial.rs  sftp.rs  ssh.rs  storage.rs  system.rs
app/src/components/: AppShell.vue  AppSidebar.vue  AppStatusBar.vue  StartupGateOverlay.vue  TerminalWorkspace.vue  TextContextMenu.vue  appShellChromeVms.ts  appShellControllerState.ts  (+8 more)
docs/: architecture-proposals.md  index.html  sync-http-api.md
docs/release-notes/: v0.2.10.md  v0.3.1.md  v0.3.10.md  v0.3.14.md  v0.3.15.md  v0.3.16.md  v0.3.19.md  v0.3.20.md
memory/: FACT.md
mobile/: App.tsx  README.md  app.json  eas.json  package.json
资料/: GitHub发布流程.md
(+71 files in other folders)
