[package]
name = "astrashell"
version = "0.3.16"
description = "AstraShell - SSH/SFTP/Serial Terminal Manager"
authors = ["GetIDC"]
license = "MIT"
repository = "https://github.com/getiid/AstraShell"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# SSH/SFTP
ssh2 = "0.9"

# Serial port
serialport = "4.5"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Local shell/PTY (for local terminal)
portable-pty = "0.8"
